@startuml

title __SECURITY's Class Diagram__\n

  namespace  {
    namespace om.eureka.auth {
      namespace security {
        class com.eureka.auth.security.JwtConfig {
            - Uri : String
            - expiration : int
            - header : String
            - prefix : String
            - secret : String
            + getExpiration()
            + getHeader()
            + getPrefix()
            + getSecret()
            + getUri()
        }
      }
    }
  }
  

  namespace  {
    namespace om.eureka.auth {
      namespace security {
        class com.eureka.auth.security.JwtUsernameAndPasswordAuthenticationFilter {
            - authManager : AuthenticationManager
            + JwtUsernameAndPasswordAuthenticationFilter()
            + attemptAuthentication()
            # successfulAuthentication()
        }
      }
    }
  }
  

  namespace  {
    namespace om.eureka.auth {
      namespace security {
        class com.eureka.auth.security.JwtUsernameAndPasswordAuthenticationFilter.UserCredentials {
            - password : String
            - username : String
            + getPassword()
            + getUsername()
            + setPassword()
            + setUsername()
        }
      }
    }
  }
  

  namespace  {
    namespace om.eureka.auth {
      namespace security {
        class com.eureka.auth.security.SecurityCredentialsConfig {
            - userDetailsService : UserDetailsService
            + jwtConfig()
            + passwordEncoder()
            # configure()
            # configure()
        }
      }
    }
  }
  

  namespace  {
    namespace om.eureka.auth {
      namespace security {
        class com.eureka.auth.security.UserDetailsServiceImpl {
            - encoder : BCryptPasswordEncoder
            + loadUserByUsername()
        }
      }
    }
  }
  

  namespace  {
    namespace om.eureka.auth {
      namespace security {
        class com.eureka.auth.security.UserDetailsServiceImpl.AppUser {
            - id : Integer
            - password : String
            - role : String
            - username : String
            + AppUser()
            + getId()
            + getPassword()
            + getRole()
            + getUsername()
            + setId()
            + setPassword()
            + setRole()
            + setUsername()
        }
      }
    }
  }
  

  com.eureka.auth.security.JwtUsernameAndPasswordAuthenticationFilter -up-|> org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter
  com.eureka.auth.security.JwtUsernameAndPasswordAuthenticationFilter o-- com.eureka.auth.security.JwtConfig : jwtConfig
  com.eureka.auth.security.JwtUsernameAndPasswordAuthenticationFilter +-down- com.eureka.auth.security.JwtUsernameAndPasswordAuthenticationFilter.UserCredentials
  com.eureka.auth.security.SecurityCredentialsConfig -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  com.eureka.auth.security.SecurityCredentialsConfig o-- com.eureka.auth.security.JwtConfig : jwtConfig
  com.eureka.auth.security.UserDetailsServiceImpl .up.|> org.springframework.security.core.userdetails.UserDetailsService
  com.eureka.auth.security.UserDetailsServiceImpl +-down- com.eureka.auth.security.UserDetailsServiceImpl.AppUser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
